force-app/main/default/objects/Account/fields/Ally_Contact_Consented_At__c.field-meta.xml
<CustomField>
    <fullName>Ally_Contact_Consented_At__c</fullName>
    <label>Ally Contact Consented At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>