force-app/main/default/objects/Account/fields/Ally_Contact_Created_At_Date__c.field-meta.xml
<CustomField>
    <fullName>Ally_Contact_Created_At_Date__c</fullName>
    <label>Ally Contact Created At</label>
    <type>DateTime</type>
</CustomField>