force-app/main/default/objects/Account/fields/Ally_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Ally_Contact_Email__c</fullName>
    <label>Ally Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>