force-app/main/default/objects/Account/fields/Athena_Id__c.field-meta.xml
<CustomField>
    <fullName>Athena_Id__c</fullName>
    <externalId>true</externalId>
    <label>Athena Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>