force-app/main/default/objects/Account/fields/Athena_Message__c.field-meta.xml
<CustomField>
    <fullName>Athena_Message__c</fullName>
    <label>Athena Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>