force-app/main/default/objects/Account/fields/Authorizenet_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Authorizenet_Customer_Id__c</fullName>
    <label>Authorizenet Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>