force-app/main/default/objects/Account/fields/Authorizenet_Customer_Page__c.field-meta.xml
<CustomField>
    <fullName>Authorizenet_Customer_Page__c</fullName>
    <formula>IF((Authorizenet_Customer_Id__c != &apos;&apos; &amp;&amp; Authorizenet_Customer_Id__c != NULL) , &apos;https://account.authorize.net/UI/themes/anet/CustomerProfile/ViewCustomerProfile.aspx?ProfileID=&apos;+ Authorizenet_Customer_Id__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorizenet Customer Page</label>
    <type>Text</type>
</CustomField>