force-app/main/default/objects/Account/fields/Confirmed_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Confirmed Email</label>
    <type>Checkbox</type>
</CustomField>