force-app/main/default/objects/Account/fields/Consented_At__c.field-meta.xml
<CustomField>
    <fullName>Consented_At__c</fullName>
    <label>Consented At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>