force-app/main/default/objects/Account/fields/Created_At_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_At_Date__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>