force-app/main/default/objects/Account/fields/First_Prescription_Sent_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>First_Prescription_Sent_to_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Prescription Sent to Patient</label>
    <type>Checkbox</type>
</CustomField>