force-app/main/default/objects/Account/fields/InitialAppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>InitialAppointmentDate__c</fullName>
    <label>Initial Appointment Date</label>
    <type>Date</type>
</CustomField>