force-app/main/default/objects/Account/fields/Maritial_Status__c.field-meta.xml
<CustomField>
    <fullName>Maritial_Status__c</fullName>
    <label>Maritial Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>