force-app/main/default/objects/Account/fields/On_Boarding_Wizard__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Wizard__c</fullName>
    <label>Last completed step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>welcome-screen</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>personal-info</fullName>
            </value>
            <value>
                <fullName>intake-form</fullName>
            </value>
            <value>
                <fullName>telesage-form</fullName>
            </value>
            <value>
                <fullName>appointment-scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>