force-app/main/default/objects/Account/fields/On_Boarding_Wizard_Created_At_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Wizard_Created_At_Date__c</fullName>
    <label>On Boarding Wizard Created At</label>
    <type>DateTime</type>
</CustomField>