force-app/main/default/objects/Account/fields/On_Boarding_Wizard_Last_Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Wizard_Last_Completed_Step__c</fullName>
    <label>Onboarding Wizard Last Completed Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>