force-app/main/default/objects/Account/fields/On_Boarding_Wizard_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Wizard_Updated_At__c</fullName>
    <label>Onboarding Wizard Updated At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>