force-app/main/default/objects/Account/fields/Patient_Protocols__c.field-meta.xml
<CustomField>
    <fullName>Patient_Protocols__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Protocols</label>
    <type>Checkbox</type>
</CustomField>