force-app/main/default/objects/Account/fields/Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronouns__c</fullName>
    <label>Preferred Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>they-them-theirs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>