force-app/main/default/objects/Account/fields/Re_25_Day_Email__c.field-meta.xml
<CustomField>
    <fullName>Re_25_Day_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re 25 Day Email</label>
    <type>Checkbox</type>
</CustomField>