force-app/main/default/objects/Account/fields/Renewal_Prescription_2__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Prescription_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Prescription 2</label>
    <type>Checkbox</type>
</CustomField>