force-app/main/default/objects/Account/fields/Sent_to_Athena__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Athena__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Athena</label>
    <type>Checkbox</type>
</CustomField>