force-app/main/default/objects/Account/fields/State_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Id_Number__c</fullName>
    <label>State Id Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>