force-app/main/default/objects/Account/fields/Stripe_Customer_Page__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Page__c</fullName>
    <formula>&apos;https://dashboard.stripe.com/customers/&apos;+ Stripe_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Customer Page Deleted</label>
    <type>Text</type>
</CustomField>