force-app/main/default/objects/Account/fields/Updated_At_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_At_Date__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>