force-app/main/default/objects/Account/fields/X10_Day_Email__c.field-meta.xml
<CustomField>
    <fullName>X10_Day_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10 Day Email</label>
    <type>Checkbox</type>
</CustomField>