force-app/main/default/objects/Account/fields/X25_Day_Email__c.field-meta.xml
<CustomField>
    <fullName>X25_Day_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>25 Day Email</label>
    <type>Checkbox</type>
</CustomField>