force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>InitialAppointmentDate__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>On_Boarding_Wizard_Last_Completed_Step__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>