force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>InitialAppointmentDate__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>On_Boarding_Wizard_Last_Completed_Step__c</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>