force-app/main/default/objects/Account/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>On_Boarding_Wizard_Last_Completed_Step__c</columns>
    <columns>On_Boarding_Wizard_Updated_At__c</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>InitialAppointmentDate__c</columns>
    <columns>On_Boarding_Wizard__c</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>On_Boarding_Wizard_Created_At__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>